# config/routes.rb
@@ -69,8 +69,13 @@ Rails.application.routes.draw do
         collection do
           get :pending, action: :pending_requests
           get :processed, action: :processed_requests
+
+
         end
+
       end
+      resources :teams_users, only: [:index, :create, :destroy]
+
     end
   end
 end
